[tool.poetry]
name = "capify-api"
version = "0.1.0"
description = ""
authors = ["PodYapolsky <podyapolskiyaa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pyyaml = "^6.0.2"
motor = "^3.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
